--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,1 +1,24 @@
-Hello index
+<section class="py-2">
+    <div class="row">
+        <div class="col-md-6 text-center">
+            <h1 class="pt-5 mt-3 display-3">Web Developement Ebook</h1>
+            <p class="lead">Learn web developement front to back</p>
+            <form action="/charge" method="post">
+                <script src="http://checkout.stripe.com/checkout.js" class="stripe-button" data-key=""
+                    data-amount="2500" data-name="web developement ebook"
+                    data-description="Ebook written by chemicalstan" data-image="img/marketplace.png"
+                    data-locale="auto">
+                    </script>
+                {{!-- disable inbuilt button --}}
+                <script>
+                    var button = document.getElementsByClassName('stripe-button-el')
+                    button[0].style.display = 'none'
+                </script>
+                <button type="submit" class="btn btn-outline-dark text-white btn-lg">Purchase For $25</button>
+            </form>
+        </div>
+        <div class="col-md-6">
+            <img style="height: 50%;" src="/img/book.png" alt="Book Image" class="img-fluid">
+        </div>
+    </div>
+</section>
