successfully payment  integration

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -4,7 +4,8 @@
             <h1 class="pt-5 mt-3 display-3">Web Developement Ebook</h1>
             <p class="lead">Learn web developement front to back</p>
             <form action="/charge" method="post">
-                <script src="http://checkout.stripe.com/checkout.js" class="stripe-button" data-key=""
+                <script src="http://checkout.stripe.com/checkout.js" class="stripe-button"
+                    data-key="pk_test_51HapQkLHRxYJ6OlKCRmwfK3bb3oEucXO5BRlqqcCtM24UdJ7nHI9w8zGgG9s0FTdwhvsOLRSsaaURJZJT3ItleB200H0zAKLGj"
                     data-amount="2500" data-name="web developement ebook"
                     data-description="Ebook written by chemicalstan" data-image="img/marketplace.png"
                     data-locale="auto">
