--- a/views/success.handlebars
+++ b/views/success.handlebars
@@ -1,3 +1,4 @@
-<div class="container">
-    <h1>payment successful</h1>
-</div>
+<section class="py-5">
+    <h1 class="display-3">Thanks You</h1>
+    <p class="lead">Your ebook should be emailed to you within one bussiness day</p>
+</section>
