Ready for deployment

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -5,8 +5,7 @@
             <p class="lead">Learn web developement front to back</p>
             <form action="/charge" method="post">
                 <script src="http://checkout.stripe.com/checkout.js" class="stripe-button"
-                    data-key="pk_test_51HapQkLHRxYJ6OlKCRmwfK3bb3oEucXO5BRlqqcCtM24UdJ7nHI9w8zGgG9s0FTdwhvsOLRSsaaURJZJT3ItleB200H0zAKLGj"
-                    data-amount="2500" data-name="web developement ebook"
+                    data-key={{ stripePublishableKey }} data-amount="2500" data-name="web developement ebook"
                     data-description="Ebook written by chemicalstan" data-image="img/marketplace.png"
                     data-locale="auto">
                     </script>
