possible err fixes

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -5,7 +5,7 @@
             <p class="lead">Learn web developement front to back</p>
             <form action="/charge" method="post">
                 <script src="http://checkout.stripe.com/checkout.js" class="stripe-button"
-                    data-key={{ stripePublishableKey }} data-amount="2500" data-name="web developement ebook"
+                    data-key="{{ stripePublishableKey }}" data-amount="2500" data-name="web developement ebook"
                     data-description="Ebook written by chemicalstan" data-image="img/marketplace.png"
                     data-locale="auto">
                     </script>
